# game

./: '  CMakeCache.txt  CMakeLists.txt  Game  README.md  TODO.txt  a.out  character.afphoto  character16.afphoto  character16.afphoto~lock~  cmake_install.cmake  compile_commands.json  globals.h  libSDL3.0.dylib  libSDL3_image.0.3.0.dylib  libSDL3_ttf.0.3.0.dylib  main.c  makefile  models.h
.cache/clangd/index/: globals.h.2F65EFB6A71F236E.idx  models.h.E43C9CC5FB1C595D.idx  player.h.1E556D1484D51581.idx  sdl.c.B38B00E86DD331CA.idx
assets/: tiny_ttf.h
assets/maps/: map.txt
controllers/: enemy.c  enemy.h  map.c  map.h  player.c  player.h  sdl.c  sdl.h  ui.c  ui.h
